creacion formulario producto

--- a/POS- CAFETERIA DULCE AROMA/POS- CAFETERIA DULCE AROMA.csproj
+++ b/POS- CAFETERIA DULCE AROMA/POS- CAFETERIA DULCE AROMA.csproj
@@ -46,6 +46,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="capa entidades\Producto.cs" />
+    <Compile Include="capa entidades\Validaciones.cs" />
+    <Compile Include="capa presentaciom\FrmProductos.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="capa presentaciom\FrmProductos.Designer.cs">
+      <DependentUpon>FrmProductos.cs</DependentUpon>
+    </Compile>
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -54,6 +62,9 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="capa presentaciom\FrmProductos.resx">
+      <DependentUpon>FrmProductos.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
@@ -115,6 +126,11 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\icons8-cafe-building-40.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="capaDatos\" />
+    <Folder Include="capaNegocio\" />
+    <Folder Include="recursos\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
